tests/ui/consts/const-as-fn.rs
const FOO: usize = 0;

fn main() {
    FOO(); //~ ERROR expected function, found `usize`
}
